unpackaged/main/default/objects/Related_Opportunity__c/fields/Exit_Path__c.field-meta.xml
<CustomField>
    <fullName>Exit_Path__c</fullName>
    <label>Exit Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>