unpackaged/main/default/objects/Related_Opportunity__c/fields/Fund_Date__c.field-meta.xml
<CustomField>
    <fullName>Fund_Date__c</fullName>
    <formula>Opportunity__r.Fund_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fund Date</label>
    <type>DateTime</type>
</CustomField>