unpackaged/main/default/objects/Related_Opportunity__c/fields/Lender__c.field-meta.xml
<CustomField>
    <fullName>Lender__c</fullName>
    <formula>Opportunity__r.Lender_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lender</label>
    <type>Text</type>
</CustomField>