unpackaged/main/default/objects/Related_Opportunity__c/fields/Reason_Closed__c.field-meta.xml
<CustomField>
    <fullName>Reason_Closed__c</fullName>
    <formula>TEXT(Opportunity__r.Reason_Closed__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reason Closed</label>
    <type>Text</type>
</CustomField>