unpackaged/main/default/objects/Related_Opportunity__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <formula>CASE( Opportunity__r.RecordType.DeveloperName,
'MCA_Oppty','Direct Sales',
'Broker_WC_Oppty','Broker',
'External_Collections', 'QB Funded',
'Direct_MLP', 'MLP',
'Lease_Oppty_Record_Type','Lease',
'Other'
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type</label>
    <type>Text</type>
</CustomField>