unpackaged/main/default/objects/Related_Opportunity__c/fields/Related_Opportunity_Search__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity_Search__c</fullName>
    <label>Related Opportunity Search</label>
    <referenceTo>Related_Opportunity_Search__c</referenceTo>
    <relationshipLabel>Related Opportunities</relationshipLabel>
    <relationshipName>Related_Opportunities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>